# GPU-Playground

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  Dependencies.cmake  LICENSE  README.md  ShaderCompiler.cmake  format-project.sh  vk_layer_settings.txt  vk_validation_settings.txt
src/: Application.cpp  CMakeLists.txt  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderPropertyFloat2.cpp  ShaderPropertyFloat2.h  ShaderPropertyFloat4.cpp  ShaderPropertyFloat4.h  ShaderPropertyInt1.h  ShaderPropertyInt2.cpp  ShaderPropertyInt2.h  ShaderPropertyMatrix4f.cpp  VertexArray.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp
src/api/: DataType.cpp  DataType.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Renderer.hpp  RenderingContext.h  RenderingContext.hpp  RenderingPipeline.cpp  RenderingPipeline.h  RenderingPipelineLayout.h  RenderingPipline.h  Shader.cpp  Shader.h  ShaderProperty.h  ShaderPropertyFloat1.cpp  ShaderPropertyFloat1.h  ShaderPropertyFloat2.cpp  ShaderPropertyFloat2.h  ShaderPropertyFloat4.cpp  ShaderPropertyInt1.cpp  ShaderPropertyInt2.cpp  ShaderPropertyMatrix4f.h  Texture.cpp  Texture.h  Texture2D.h  Uniform.h  UniformBuffer.h  Utils.h  VertexArray.h  VertexAttributeDescription.cpp  VertexAttributeDescription.h  VertexBinding.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  buffer.hpp  data_type.cpp  (+16 more)
src/api/gl/: GlIndexBuffer.cpp  GlIndexBuffer.h  GlRenderingContext.cpp  GlRenderingContext.h  GlRenderingPipeline.cpp  GlRenderingPipeline.h  GlRenderingPipelineLayout.cpp  GlRenderingPipelineLayout.h  GlShader.cpp  GlShader.h  GlTexture2D.cpp  GlTexture2D.h  GlUniform.h  GlUniformBuffer.cpp  GlUniformBuffer.h  GlUtils.cpp  GlUtils.h  GlVertexBinding.cpp  GlVertexBinding.h  GlVertexBuffer.cpp  GlVertexBuffer.h
src/api/opengl/: opengl_buffer.cpp  opengl_buffer.hpp  opengl_index_buffer.cpp  opengl_index_buffer.hpp  opengl_rendering_context.cpp  opengl_rendering_context.hpp  opengl_rendering_pipeline.cpp  opengl_rendering_pipeline.hpp  opengl_rendering_pipeline_layout.cpp  opengl_rendering_pipeline_layout.hpp  opengl_shader.cpp  opengl_shader.hpp  opengl_texture_2d.cpp  opengl_texture_2d.hpp  opengl_uniform.hpp  opengl_uniform_buffer.cpp  opengl_uniform_buffer.hpp  opengl_utils.cpp  opengl_utils.hpp  opengl_vertex_binding.cpp  opengl_vertex_binding.hpp  opengl_vertex_buffer.cpp  opengl_vertex_buffer.hpp
src/api/vulkan/: VkIndexBuffer.cpp  VkIndexBuffer.h  VkRenderingContext.cpp  VkRenderingContext.h  VkRenderingPipeline.cpp  VkRenderingPipeline.h  VkRenderingPipelineLayout.cpp  VkRenderingPipelineLayout.h  VkShader.cpp  VkShader.h  VkTexture2D.cpp  VkTexture2D.h  VkUniform.h  VkUniformBuffer.cpp  VkUniformBuffer.h  VkVertexBinding.cpp  VkVertexBinding.h  VkVertexBuffer.cpp  VkVertexBuffer.h  VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanRenderingContext.cpp  VulkanRenderingContext.h  VulkanRenderingPipeline.cpp  VulkanRenderingPipeline.h  VulkanRenderingPipelineLayout.cpp  VulkanRenderingPipelineLayout.h  VulkanShader.cpp  VulkanShader.h  VulkanTexture2D.cpp  VulkanTexture2D.h  VulkanUniform.h  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h  VulkanUtils.cpp  (+28 more)
src/application/: Application.h  GLFWApplication.cpp  GLFWApplication.h  GlfwApplication.cpp  GlfwApplication.h  OpenGLApplication.cpp  OpenGLApplication.h  OpenGlApplication.cpp  OpenGlApplication.h  TestApplication.cpp  TestApplication.h  VulkanApplication.cpp  VulkanApplication.h  application.cpp  application.hpp  glfw_application.cpp  glfw_application.hpp  opengl_application.cpp  opengl_application.hpp  renderable.hpp  test_application.cpp  test_application.hpp  vulkan_application.cpp  vulkan_application.hpp
src/geometry/: GeometryItem.h  Point.h  Point.hpp  Quad.cpp  Quad.h  SpiralSphere.cpp  SpiralSphere.h  StackedSphere.cpp  StackedSphere.h  Triangle.cpp  Triangle.h  color.hpp  geometry_item.cpp  geometry_item.hpp  gltf_model.cpp  gltf_model.hpp  gltf_model_defaults.hpp  plane_2d.cpp  plane_2d.hpp  point.hpp  quad.cpp  quad.hpp  spiral_sphere.cpp  spiral_sphere.hpp  stacked_sphere.cpp  stacked_sphere.hpp  triangle.cpp  triangle.hpp
src/impl/: vma_impl.cpp
src/include/: vulkan_glfw.hpp  vulkan_include.hpp
src/renderables/: imgui_wrapper.cpp  imgui_wrapper.hpp  shader.cpp  shader.hpp
src/shaders/: CMakeLists.txt  color_fragment_shader.glsl  default_color_fragment_shader.glsl  default_color_vertex_shader.glsl  default_empty_vertex_shader.glsl  default_mvp_color_vertex_shader.glsl  gltf_fragment.glsl  gltf_vertex.glsl  greyscale.glsl  hsb_fragment.glsl  lighting_fragment.glsl  lighting_vertex.glsl  particles.comp.glsl  point.frag.glsl  point.vert.glsl  shaders.cpp  shaders.hpp  shaping_function_fragment_shader.glsl  squares_fragment_shader.glsl  texture2d_fragment.glsl  texture2d_vertex.glsl
src/test/: MVPTest.cpp  MVPTest.h  Test.h  TestClearColor.cpp  TestClearColor.h  TestColorShader.h  TestColorShader.hpp  TestCube.cpp  TestCube.h  TestMVP.cpp  TestMVP.h  TestMenu.cpp  TestMenu.h  TestModel.cpp  TestModel.h  TestObj.cpp  TestObj.h  TestRaymarching.hpp  TestSeascapeShader.h  TestSeascapeShader.hpp  TestShader.cpp  TestShader.h  TestShapingFunctionShader.h  TestShapingFunctionShader.hpp  TestSphere.cpp  TestSphere.h  TestSquaresShader.h  TestStarNestShader.h  TestStarNestShader.hpp  TestTexture2D.cpp  TestTexture2D.h  TestTexture2d.cpp  TestTexture2d.h  TestTriangle.cpp  TestTriangle.h  test.h  test_clear_color.cpp  test_clear_color.hpp  test_color_shader.hpp  test_cube.cpp  (+24 more)
src/utils/: check.hpp  compiler.hpp  variant_utils.hpp
src/vulkan/: buffer.cpp  buffer.hpp  compute_pipeline.cpp  compute_pipeline.hpp  framebuffer.cpp  framebuffer.hpp  image.cpp  image.hpp  image_view.cpp  image_view.hpp  render_pass.cpp  render_pass.hpp  rendering_context.cpp  rendering_context.hpp  rendering_pipeline.cpp  rendering_pipeline.hpp  sampler.cpp  sampler.hpp  semaphore_pool.cpp  semaphore_pool.hpp  shader.cpp  shader.hpp  utils.cpp  utils.hpp  vertex_buffer_layout.cpp  vertex_buffer_layout.hpp  vulkan_include.hpp
(+96 files in other folders)
